error fixin